# nmpc_acados

./: README.md
acados_cpp_demo/: CMakeLists.txt  README.md
acados_cpp_demo/include/: nmpc_caller.h
acados_cpp_demo/src/: main.cpp  nmpc_caller.cpp
acados_python_demo/: README.md  main.py  srbd_acados_ocp.json  srbd_model.py  srbd_ocp_setting.py
